--- a/hello.html
+++ b/hello.html
@@ -1,12 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>My webpage</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+  
 
-      Hello Audience!Hello
-
-     
+   <div>
+      hello world
+   </div>
   </body>
 </html>
